[package]
name = "spofr"
version = "0.1.2"
edition = "2021"
description = "A network spoofing tool for educational purposes (ARP and DHCP)."
license = "MIT"
repository = "https://github.com/hotplugindev/spofr"
readme = "README.md"
keywords = ["arp", "dhcp", "spoofing", "network", "security"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
dialoguer = "0.12.0"
pnet = "0.35.0"
rand = "0.9.2"
libc = "0.2"
